--- a/scss/04_component/_index.scss
+++ b/scss/04_component/_index.scss
@@ -1,3 +1,3 @@
-@import './common/index';
-@import './mainpage/index';
-@import './myPage/index';
+@import './common';
+@import './mainpage';
+// @import './myPage/index';
